--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7570,7 +7570,8 @@ html {
             animation-duration: 1s; }
     @media (max-width: 767px) {
       .hiro-header-carousel .carousel-item-social-links {
-        margin-bottom: 30px; } }
+        margin-bottom: 30px; 
+        margin-top: 30px;;} }
     .hiro-header-carousel .carousel-item-social-links li + li::before {
       content: "";
       display: inline-block;
@@ -7813,7 +7814,7 @@ html {
     font-weight: 500;
     line-height: 1;
     color: #000000;
-    padding: 0; }
+    padding: 25px; }
 
 .hiro-footer {
   padding-top: 33px;
@@ -7972,4 +7973,12 @@ html {
     opacity: 1;
     width: 100%; }
 
+.btn {
+  margin-top: 35px;
+  margin-bottom: 35px;
+  width: 150px;
+  background-color: white;
+  border-color: #040505;
+  border-width: 2px;
+}
 /*# sourceMappingURL=style.css.map */
