--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7977,7 +7977,7 @@ html {
   margin-top: 35px;
   margin-bottom: 35px;
   width: 150px;
-  background-color: white;
+  background-color: lightcyan;
   border-color: #040505;
   border-width: 2px;
 }
